# Parcial-Corte2

dispositivos/: CMakeLists.txt
dispositivos/include/: Archivo.h
dispositivos/src/: DispositivoInteligente.cpp  main.cpp
